@@ -960,6 +960,10 @@
       <p2 x="680" y="300"/>
     </wire>
     <wire>
+      <p1 x="400" y="940"/>
+      <p2 x="420" y="940"/>
+    </wire>
+    <wire>
       <p1 x="580" y="560"/>
       <p2 x="620" y="560"/>
     </wire>
@@ -1270,6 +1274,10 @@
     <wire>
       <p1 x="400" y="400"/>
       <p2 x="400" y="580"/>
+    </wire>
+    <wire>
+      <p1 x="400" y="920"/>
+      <p2 x="400" y="940"/>
     </wire>
     <wire>
       <p1 x="400" y="580"/>
